...
            Icons.person_outline_rounded,
            color: AppColors.AppPrimaryColor,
            size: 24.sp,
          ),
          SizedBox(width: 10.w),
          Text(
            'Continue as Guest',
            style: TextStyle(
              fontSize: 16.sp,
              fontWeight: FontWeight.w600,
              color: AppColors.AppPrimaryColor,
            ),
          ),
...
